@@ -12,6 +12,7 @@ export(install.R)
 export(install.RStudio)
 export(install.Rtools)
 export(install.URL)
+export(is.Rgui)
 export(is.RStudio)
 export(is.windows)
 export(shutdown)
